# corax-telegram-connector

./: .gitignore  README.md  capability.json  main.py  pyproject.toml
examples/: example_request.json
tests/: test_capability.py
